# rustyhand

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE-MIT  Makefile  README.md  SECURITY.md  docker-compose.yml  docker-entrypoint.sh  rustyhand.toml.example
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
agents/analyst/: agent.toml
agents/api-monitor/: agent.toml
agents/architect/: agent.toml
agents/assistant/: agent.toml
agents/capability-builder/: agent.toml
agents/ci-monitor/: agent.toml
agents/code-reviewer/: agent.toml
agents/coder/: agent.toml
agents/coordinator/: agent.toml
agents/customer-support/: agent.toml
agents/dag-monitor/: agent.toml
agents/data-scientist/: agent.toml
agents/db-reporter/: agent.toml
agents/debugger/: agent.toml
agents/devops-lead/: agent.toml
agents/diagnostic/: agent.toml
agents/doc-writer/: agent.toml
agents/email-assistant/: agent.toml
agents/health-tracker/: agent.toml
agents/hello-world/: agent.toml
agents/home-automation/: agent.toml
agents/legal-assistant/: agent.toml
agents/log-analyzer/: agent.toml
agents/meeting-assistant/: agent.toml
agents/ops/: agent.toml
agents/orchestrator/: agent.toml
agents/personal-finance/: agent.toml
agents/planner/: agent.toml
agents/recruiter/: agent.toml
agents/researcher/: agent.toml
agents/sales-assistant/: agent.toml
agents/security-auditor/: agent.toml
agents/slack-notifier/: agent.toml
agents/social-media/: agent.toml
agents/test-engineer/: agent.toml
agents/translator/: agent.toml
agents/travel-planner/: agent.toml
agents/tutor/: agent.toml
agents/weekly-digest/: agent.toml
agents/writer/: agent.toml
crates/rusty-hand-api/: Cargo.toml
crates/rusty-hand-api/src/: channel_bridge.rs  lib.rs  middleware.rs  openai_compat.rs  rate_limiter.rs  routes.rs  server.rs  stream_chunker.rs  types.rs  webchat.rs  ws.rs
crates/rusty-hand-api/static/: index_body.html  index_head.html
crates/rusty-hand-api/static/css/: components.css  layout.css  theme.css
crates/rusty-hand-api/static/js/: api.js  app.js
crates/rusty-hand-api/static/js/pages/: agents.js  analytics.js  approvals.js  automation.js  channels.js  chat.js  knowledge.js  settings.js  skills.js  workflow-builder.js  workflows.js
crates/rusty-hand-api/tests/: api_integration_test.rs  api_response_shapes_test.rs  daemon_lifecycle_test.rs  load_test.rs
crates/rusty-hand-channels/: Cargo.toml
crates/rusty-hand-channels/src/: bluesky.rs  bridge.rs  dingtalk.rs  discord.rs  discourse.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  ntfy.rs  pumble.rs  reddit.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  twitch.rs  types.rs  viber.rs  webex.rs  webhook.rs  (+2 more)
crates/rusty-hand-channels/tests/: bridge_integration_test.rs
crates/rusty-hand-cli/: Cargo.toml
crates/rusty-hand-cli/src/: bundled_agents.rs  dotenv.rs  launcher.rs  main.rs  mcp.rs  templates.rs  ui.rs
crates/rusty-hand-cli/src/tui/: chat_runner.rs  event.rs  mod.rs  theme.rs
crates/rusty-hand-cli/src/tui/screens/: agents.rs  channels.rs  extensions.rs  init_wizard.rs  memory.rs  mod.rs  peers.rs  security.rs  templates.rs  welcome.rs  wizard.rs
crates/rusty-hand-extensions/: Cargo.toml
crates/rusty-hand-extensions/integrations/: github.toml  gmail.toml  google-calendar.toml  google-drive.toml  sqlite-mcp.toml  teams-mcp.toml
crates/rusty-hand-extensions/src/: bundled.rs  credentials.rs  installer.rs  lib.rs  oauth.rs  registry.rs  vault.rs
crates/rusty-hand-kernel/: Cargo.toml
crates/rusty-hand-kernel/src/: approval.rs  auth.rs  auto_reply.rs  background.rs  capabilities.rs  config.rs  config_reload.rs  cron.rs  demo_seed.rs  error.rs  event_bus.rs  heartbeat.rs  kernel.rs  lib.rs  metering.rs  pairing.rs  registry.rs  scheduler.rs  supervisor.rs  triggers.rs  workflow.rs
crates/rusty-hand-kernel/tests/: integration_test.rs  multi_agent_test.rs  wasm_agent_integration_test.rs  workflow_integration_test.rs
crates/rusty-hand-memory/: Cargo.toml
crates/rusty-hand-memory/src/: consolidation.rs  knowledge.rs  lib.rs  migration.rs  semantic.rs  session.rs  structured.rs  substrate.rs  usage.rs
crates/rusty-hand-runtime/: Cargo.toml
crates/rusty-hand-runtime/src/: a2a.rs  agent_loop.rs  apply_patch.rs  audit.rs  auth_cooldown.rs  browser.rs  compactor.rs  context_budget.rs  context_overflow.rs  docker_sandbox.rs  embedding.rs  graceful_shutdown.rs  hooks.rs  host_functions.rs  http_client.rs  image_gen.rs  ingest.rs  kernel_handle.rs  lib.rs  link_understanding.rs  llm_cache.rs  llm_driver.rs  llm_errors.rs  mcp.rs  mcp_server.rs  media_understanding.rs  model_catalog.rs  process_manager.rs  prompt_builder.rs  provider_health.rs  python_runtime.rs  retry.rs  routing.rs  sandbox.rs  session_repair.rs  subprocess_sandbox.rs  tool_runner.rs  tts.rs  web_content.rs  web_fetch.rs  (+2 more)
crates/rusty-hand-runtime/src/drivers/: anthropic.rs  copilot.rs  fallback.rs  gemini.rs  mock.rs  mod.rs  openai.rs
crates/rusty-hand-runtime/tests/: kimi_integration_test.rs  openai_stream_error_test.rs  sse_conformance_test.rs
crates/rusty-hand-skills/: Cargo.toml
crates/rusty-hand-skills/src/: bundled.rs  clawhub.rs  lib.rs  marketplace.rs  openclaw_compat.rs  registry.rs
crates/rusty-hand-types/: Cargo.toml
crates/rusty-hand-types/src/: agent.rs  approval.rs  capability.rs  config.rs  error.rs  event.rs  lib.rs  manifest_signing.rs  memory.rs  (+7 more)
crates/rusty-hand-wire/: Cargo.toml
crates/rusty-hand-wire/src/: lib.rs  message.rs  peer.rs
deploy/: rustyhand.service
examples/: eval-basic.yaml
scripts/: install.ps1  install.sh
scripts/docker/: install-smoke.Dockerfile
sdk/javascript/: index.d.ts  index.js  package.json
sdk/python/: rustyhand_client.py  rustyhand_sdk.py  setup.py
(+5 files in other folders)
