[package]
name = "rusty-hand-channels"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Channel Bridge Layer — pluggable messaging integrations for RustyHand"

[dependencies]
rusty-hand-types = { path = "../rusty-hand-types" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio-tungstenite = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
