[package]
name = "rusty-hand-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core kernel for the RustyHand Agent OS"

[dependencies]
rusty-hand-types = { path = "../rusty-hand-types" }
rusty-hand-memory = { path = "../rusty-hand-memory" }
rusty-hand-runtime = { path = "../rusty-hand-runtime" }
rusty-hand-skills = { path = "../rusty-hand-skills" }
rusty-hand-extensions = { path = "../rusty-hand-extensions" }
rusty-hand-wire = { path = "../rusty-hand-wire" }
rusty-hand-channels = { path = "../rusty-hand-channels" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dashmap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
subtle = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
reqwest = { workspace = true }
cron = "0.15"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
