[package]
name = "rusty-hand-skills"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Skill system for RustyHand — registry, loader, marketplace, and OpenClaw compatibility"

[dependencies]
rusty-hand-types = { path = "../rusty-hand-types" }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }
